Add 1 year expiration to assets

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,5 @@ phases:
       - yarn run build
   post_build:
     commands:
-      - aws s3 sync build/ "s3://${BUCKET_NAME}"
+      - aws s3 sync --exclude assets/* build/ "s3://${BUCKET_NAME}"
+      - aws s3 sync --expires "max-age=31536000" build/assets "s3://${BUCKET_NAME}/assets"
