--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "metalsmith-fingerprint-ignore": "^1.1.2",
     "metalsmith-html-minifier": "^2.2.0",
     "metalsmith-if": "^0.1.1",
+    "metalsmith-imagemin": "^3.0.0",
     "metalsmith-layouts": "^1.7.0",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-move-up": "^1.0.0",
