--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-disqus-comments": "^1.0.1",
     "angular-ui-router": "^0.3.2",
     "angulartics": "^1.3.0",
     "angulartics-google-analytics": "^0.4.0",
