--- a/package.json
+++ b/package.json
@@ -122,5 +122,9 @@
     "postcss": "^5.2.6",
     "postcss-scss": "^0.4.0",
     "prismjs": "^1.6.0"
+  },
+  "devDependencies": {
+    "nodegit": "^0.16.0",
+    "nodegit-flow": "^0.3.0"
   }
 }
