Upgrade dependencies. Migrate to bootstrap v4-alpha-6.

--- a/package.json
+++ b/package.json
@@ -83,25 +83,25 @@
     }
   },
   "dependencies": {
-    "angular": "^1.6.0",
+    "angular": "^1.6.1",
     "angular-disqus-comments": "^1.0.2",
-    "angular-ui-router": "^0.3.2",
+    "angular-ui-router": "^0.4.2",
     "angulartics": "^1.3.0",
     "angulartics-google-analytics": "^0.4.0",
-    "autoprefixer": "^6.5.3",
+    "autoprefixer": "^6.7.0",
     "axios": "^0.15.3",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
-    "bootstrap": "4.0.0-alpha.5",
-    "browserify": "^13.1.1",
-    "eslint": "^3.12.2",
-    "handlebars": "^4.0.5",
-    "helper-moment": "^0.1.0",
-    "lodash": "^4.17.3",
+    "bootstrap": "4.0.0-alpha.6",
+    "browserify": "^14.0.0",
+    "eslint": "^3.14.1",
+    "handlebars": "^4.0.6",
+    "helper-moment": "^0.2.0",
+    "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "metalsmith": "^2.3.0",
     "metalsmith-browser-sync": "^1.1.1",
-    "metalsmith-browserify": "^0.1.2",
+    "metalsmith-browserify": "^0.2.4",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-drafts": "^0.0.1",
     "metalsmith-fingerprint-ignore": "^1.1.2",
@@ -113,13 +113,13 @@
     "metalsmith-move-up": "^1.0.0",
     "metalsmith-pagination": "^1.4.0",
     "metalsmith-permalinks": "^0.5.0",
-    "metalsmith-prism": "ReedD/metalsmith-prism",
-    "metalsmith-sass": "^1.3.0",
+    "metalsmith-prism": "^3.0.2",
+    "metalsmith-sass": "^1.4.0",
     "metalsmith-uglify": "^1.5.1",
     "minimatch": "^3.0.3",
     "multimatch": "^2.1.0",
     "nodemon": "^1.10.2",
-    "postcss": "^5.2.6",
+    "postcss": "^5.2.11",
     "postcss-scss": "^0.4.0",
     "prismjs": "^1.6.0"
   }
