--- a/package.json
+++ b/package.json
@@ -135,7 +135,10 @@
     "prismjs": "^1.6.0"
   },
   "devDependencies": {
+    "bluebird": "^3.4.7",
     "nodegit": "^0.16.0",
-    "nodegit-flow": "^0.3.0"
+    "nodegit-flow": "^0.3.0",
+    "semver": "^5.3.0",
+    "yargs": "^6.6.0"
   }
 }
