--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "dadoune.com",
   "version": "1.2.1",
   "description": "Static site generator for dadoune.com",
-  "homepage": "http://dadoune.com",
+  "homepage": "https://www.dadoune.com",
   "scripts": {
-    "watch": "nodemon --watch build.js --watch scripts build.js",
     "build": "rm -rf build/ && NODE_ENV=production node build.js",
-    "lint": "node_modules/eslint/bin/eslint.js --ignore-path .gitignore .",
     "depcheck": "depcheck --ignores=eslint,babelify,babel-preset-es2015,handlebars .",
-    "pre-commit": "pre-commit run --all-files",
-    "test": "yarn run depcheck && yarn run lint && yarn run pre-commit"
+    "eslint": "node_modules/eslint/bin/eslint.js --ignore-path .gitignore .",
+    "precommit": "pre-commit run -a",
+    "scsslint": "scss-lint --config .scss-lint.yml",
+    "test": "yarn run depcheck && yarn run eslint && yarn scsslint && pre-commit run trailing-whitespace -a && pre-commit run end-of-file-fixer -a && pre-commit run check-merge-conflict -a && pre-commit run check-json -a && pre-commit run check-yaml -a && pre-commit run check-symlinks -a",
+    "watch": "nodemon --watch build.js --watch scripts build.js"
   },
   "author": "Reed Dadoune <reed@dadoune.com>",
   "private": true,
