--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "marked": "^0.3.6",
     "metalsmith": "^2.3.0",
     "metalsmith-browser-sync": "^1.1.1",
-    "metalsmith-browserify": "^0.2.4",
+    "metalsmith-browserify": "ReedD/metalsmith-browserify",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-drafts": "^0.0.1",
     "metalsmith-fingerprint-ignore": "^1.1.2",
