--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,18 +15,8 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "lib": [
-      "dom",
-      "es2015",
-      "es2016"
-    ]
+    "typeRoots": ["./node_modules/@types"],
+    "lib": ["dom", "es2015", "es2016"]
   },
-  "exclude": [
-    "dist/**/*",
-    "public/**/*",
-    "node_modules"
-  ]
+  "exclude": ["dist/**/*", "public/**/*", "node_modules"]
 }
