--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,3 +19,5 @@ phases:
   post_build:
     commands:
       - aws s3 sync --delete dist/ "s3://${BUCKET_NAME}"
+      - aws s3 cp "s3://${BUCKET_NAME}" "s3://${BUCKET_NAME}" --exclude "*" --include "*.js" --cache-control "max-age=31536000"
+      - aws s3 cp "s3://${BUCKET_NAME}" "s3://${BUCKET_NAME}" --exclude "*" --include "static/*" --cache-control "max-age=31536000"
