--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       - yarn
   build:
     commands:
-      - yarn run build
+      - CONTENTFUL_SPACE_ID="${CONTENTFUL_SPACE_ID}" CONTENTFUL_ACCESS_TOKEN="${CONTENTFUL_ACCESS_TOKEN}" CONTENTFUL_BLOG_CONTENT_ID="${CONTENTFUL_BLOG_CONTENT_ID}" yarn run build
   post_build:
     commands:
       - aws s3 sync --delete dist/ "s3://${BUCKET_NAME}"
