--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "react-static build",
     "prettier": "yarn run prettier:ts -- \"./src/**/*.{ts,tsx}\"",
     "prettier:ts": "prettier --single-quote --trailing-comma all --write",
+    "release": "standard-version",
     "serve": "serve dist -p 3000",
     "stage": "react-static build --staging",
     "start": "react-static start"
@@ -48,6 +49,7 @@
     "lint-staged": "^7.2.2",
     "marked": "^0.5.0",
     "serve": "^6.5.3",
+    "standard-version": "^4.4.0",
     "ts-loader": "^3.5.0",
     "typescript": "^3.0.1"
   },
