--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^6.0.0",
     "highlight.js": "^9.12.0",
     "husky": "^0.14.3",
+    "imagemin-webpack-plugin": "^2.2.0",
     "lint-staged": "^7.2.2",
     "marked": "^0.5.0",
     "serve": "^10.0.0",
