--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "www.dadoune.com",
+  "name": "Reed Dadoune",
   "short_name": "Dadoune",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
